--- a/documentation/1.Analysis.md
+++ b/documentation/1.Analysis.md
@@ -1,48 +1,127 @@
-## ANALYSIS
-Specification requirements of the client. The client has a business idea and wants to implement it with our services. The client wants to:
-+ Provide people with a comfortable way of shopping online
-+ Provide suppliers with a comfortable business relationship
-+ Provide a fast and easy solution for customers
+# ANALYSIS
+## I. Project Overview:
 
-#### Preliminary analysis: In order to provide a business solution we will need:
-+ To know the inventory and its internal structure to manipulate it with a database:
-    * Name, price, size, color, category, sku, images, description, discount, number of units, order status, shipping status
-+ To guide a customer through different buying stages:
-    * Awareness, exploration, decision making, purchasing and retantion
-+ To generate all of the actions a user can perform:
-    * Browse products and information, search products using filters, add x units to cart, remove x units from cart, update profile, pay, comment and rate products, contact support, register, login, logout
-+ To make a scalable and robust website:
-    + Robust:
-        * Secure: Authentification, Encryption
-        * Fast: Loading speed less than 2 seconds
-        * Reliable: QA, Testing all routes, methods and user actions
-    + Scalable:
-        * Evolutionary model, clean code architecture, domain driven design 
-+ To make the website appealing acording to the clients brand aesthetics
-    * UX/UI
-+ To ask the client for all the legal information to be included and display it to the users as well as the about us and or a whitepaper
-+ To solve users questions
-    * FAQ
-    * Customer service
-+ To maintain the website
-+ To understand the marketing strategies
-    * SEO, email marketing, discounts
+#### 1.1 Objective:
+    The objective of this project is to develop a fully functional e-commerce website for an apparel store with 50000 users per month that meets the client's requirements for speed, security, usability, aesthetics, legal compliance, and mobile responsiveness
 
-#### Based on the preliminary analysis of our costumer, we can conclude:
-+ Objectives:
-    * Easy-to-use website
-    * Secure and reliable website
-    * Fast loading website
-    * Fast database
-    * Website routes for the user
-    * Applealing website
-    * Legal compliant
-    * Customer service
+#### 1.2 Scope:
+    The website will include features for browsing and purchasing clothing items online. It will be designed to showcase the clothing collection, filter items by properties such as: Brand, color, size, type and price. Provide secure payment options, an enjoyable user experience, a login page to store and update the clients personal information, a marketing page to create and manage campaigns, and an analysis page with the information about all actions regarding the website.
 
-+ Scope:
-    * Analysis and specification of requirements
-    * Design of the website and database structure
-    * Coding of the website and database
-    * Testing of all routes, methods, and user actions
-    * Installation and production of the website
-    * Maintenance of the website
+
+## II. Requirements:
+
+    2.1 Functional requirements
+        1. User Authentication and Authorization:
+
+            User registration and login functionality.
+            Secure password handling.
+            Different user roles: Customer, Administrator.
+
+        2 Product Management:
+
+            Ability for administrators to add, edit, and delete product listings.
+            Categorization and tagging of products for easy navigation.
+            Product images, descriptions, prices, sizes, brands and colors
+
+        3 Shopping Cart:
+
+            Users should be able to add/remove items from the cart.
+            Real-time calculation of the total cost.
+            Secure checkout process with multiple payment options.
+
+        4 Search and Filtering:
+
+            Intuitive search functionality.
+            Filtering options based on categories, sizes, colors, etc.
+
+        5 Responsive Design:
+
+            Mobile-friendly design for seamless user experience on various devices.
+
+        6 Performance:
+
+            Fast loading times for both desktop and mobile versions.
+            Image optimization for quick loading without compromising quality.
+
+        7 Security:
+
+            HTTPS to secure data transmission.
+            Secure payment gateway integration.
+            Protection against common web vulnerabilities (e.g., SQL injection, cross-site scripting).
+
+        8 Legal Compliance:
+
+            GDPR compliance for user data protection.
+            Clear terms and conditions, privacy policy, and return policy.
+            Compliance with regional e-commerce regulations.
+
+        9 User Experience (UX):
+
+            Intuitive and easy-to-navigate interface.
+            User-friendly product pages with clear calls-to-action.
+            Mobile-first design for optimal viewing on smartphones and tablets.
+
+        10 Aesthetics:
+
+            Visually appealing design that aligns with the brand image.
+            High-quality images for products.
+
+        11 Reporting and Analytics:
+
+            Administrator dashboard with key metrics (e.g., sales, popular products).
+            Integration with Google Analytics or similar tools for in-depth analysis.
+
+        12 Webpages:
+
+            + Login
+            + Profile
+            + Homepage
+            + Explore
+            + Category
+            + Product page
+            + Checkout
+            + Checkout confirmation
+            + Payment with 3rd party integration
+
+    2.2 Non functional requirementes
+
+        Customer guidance through different buying stages:
+            - Awareness
+            - Exploration
+            - Decision making
+            - Purchasing
+            - Retantion
+
+
+## III. Stakeholders:
+
+    Client: [Clients name]
+    End Users: Online shoppers interested in purchasing clothing items.
+    Administrators: Staff responsible for managing product listings, processing orders, and maintaining the website.
+
+
+## IV. Constraints:
+
+    Compatibility with popular web browsers.
+    Integration with selected payment gateways.
+    Consideration of potential scalability requirements.
+
+
+## V. Assumptions:
+
+    Users have basic internet connectivity.
+    Customers will use a variety of devices and browsers.
+    The website will comply with relevant e-commerce and data protection laws.
+    The client 
+
+## VI. Risks:
+
+    Potential security vulnerabilities.
+    Changes in e-commerce regulations.
+    Technical challenges in integrating third-party services.
+
+
+
+
+
+
