--- a/documentation/2.Design.md
+++ b/documentation/2.Design.md
@@ -1,39 +1,95 @@
-## DESIGN
+# DESIGN
 The design concept for our ecommerce store is centered around a modern and minimalistic style with a focus on usability and ease of navigation.
 Come up with a plan or algorithm to successfully and efficiently execute the client needs based on the analysis requirements
 
-### Architecture
-The E-commerce Web App follows a modern, microservices-based architecture that provides a flexible and scalable platform for online shopping. The app is built using the following technologies:
 
-* Django Rest Framework: A modern, fast, web framework for building APIs with Python. Django provides high performance, validation, and easy-to-use asynchronous support.
-* Kafka: A distributed streaming platform that enables real-time communication between services. Kafka provides scalable and fault-tolerant messaging, making it ideal for building microservices architectures.
-* PostgreSQL: A powerful and reliable relational database management system. PostgreSQL provides a flexible data model, transaction support, and advanced features such as JSON storage and full-text search.
+## Customer actions:
 
-The Web application e-commerce consists of the following microservices:
-
-* Backend Service: Manages the interactions with the user and displays all the information. Provides the endpoints, APIs and allows interaction
-* Inventory Service: Manages and tracks the inventory levels of each product. Provides operations for updating inventory levels and interacts with the Order Service.
-* Order Service: Manages payments of the order placement and fulfillment process. Provides operations for placing orders, tracking order and status.
-* User Service: Manages user authentication and authorization. Provides operations for registering, logging in, and managing user accounts.
-* Marketing Service: Manages marketing campaigns and product discounts. Provides mechanisms for users to benefit from the different companys strategies.
-* Email Service: Manages email sent to a subscribers list. Provides a list of subscribed user to send emails to and keeps track of the sent emails.
-* Analytics Service: Keeps track of all actions in the platform. Provides statistics based on user interactions, consumer behaviour and measures marketing campaigns effectiveness.
-
-Each microservice is built as a separate Python package and runs in its own Docker container. Communication between services is handled through Kafka topics, allowing for scalable and fault-tolerant messaging. The Web application also includes a gateway service, built with Django, that provides a unified API for clients to interact with the microservices.
-
-Overall, the microservices architecture provides a scalable and flexible platform for building an ecommerce Web application, allowing for easy scaling and maintenance of individual components.
+    * Browse products and categories, filter search, add units to cart, remove units from cart, update profile, pay order, comment and rate products, subscribe to newsletter, contact support, register, login and logout.
 
 
-### Features:
-* User registration and authentication
-* Product catalog with search and filter functionality
-* Shopping cart and checkout process
-* Payment processing and order tracking
-* User dashboard with order history and account settings
-* Analytics and marketing modules
++ To know the inventory and its internal structure to manipulate it with a database:
+    * Name, price, size, color, category, sku, images, description, discount, number of units, order status, shipping status.
+
++ To make a scalable and robust website:
+    + Robust:
+        * Secure: Authentification, Encryption
+        * Fast: Loading speed less than 2 seconds
+        * Reliable: QA, Testing all routes, methods and user actions
+    + Scalable:
+        * Evolutionary model, clean code architecture, domain driven design 
++ To make the website appealing acording to the clients brand aesthetics
+    * UX/UI
++ To ask the client for all the legal information to be included and display it to the users as well as the about us and or a whitepaper
++ To solve users questions
+    * FAQ
+    * Customer service
++ To maintain the website
++ To understand the marketing strategies
+    * SEO, email marketing, discounts
 
 
-### Wireframe
+
+## Architecture
+    The E-commerce Web App follows a modern, microservices-based architecture that provides a flexible and scalable platform for online shopping. The app is built using the following technologies:
+
+    * Django Rest Framework: A modern, fast, web framework for building APIs with Python. Django provides high performance, validation, and easy-to-use asynchronous support.
+    * Kafka: A distributed streaming platform that enables real-time communication between services. Kafka provides scalable and fault-tolerant messaging, making it ideal for building microservices architectures.
+    * PostgreSQL: A powerful and reliable relational database management system. PostgreSQL provides a flexible data model, transaction support, and advanced features such as JSON storage and full-text search.
+
+    The Web application e-commerce consists of the following microservices:
+
+    * Backend Service: Manages the interactions with the user and displays all the information. Provides the endpoints, APIs and allows interaction
+    * Inventory Service: Manages and tracks the inventory levels of each product. Provides operations for updating inventory levels and interacts with the Order Service.
+    * Order Service: Manages payments of the order placement and fulfillment process. Provides operations for placing orders, tracking order and status.
+    * User Service: Manages user authentication and authorization. Provides operations for registering, logging in, and managing user accounts.
+    * Marketing Service: Manages marketing campaigns and product discounts. Provides mechanisms for users to benefit from the different companys strategies.
+    * Email Service: Manages email sent to a subscribers list. Provides a list of subscribed user to send emails to and keeps track of the sent emails.
+    * Analytics Service: Keeps track of all actions in the platform. Provides statistics based on user interactions, consumer behaviour and measures marketing campaigns effectiveness.
+
+    Each microservice is built as a separate Python package and runs in its own Docker container. Communication between services is handled through Kafka topics, allowing for scalable and fault-tolerant messaging. The Web application also includes a gateway service, built with Django, that provides a unified API for clients to interact with the microservices.
+
+    Overall, the microservices architecture provides a scalable and flexible platform for building an ecommerce Web application, allowing for easy scaling and maintenance of individual components.
+
+    * Each microservice consists of a different organization depending on its needs
+    * Backend microservices are arranged providing the following endpoints:
+        #### API (handles all requests and delegates):
+            - New user registration
+            - Login
+            - Verify OTP
+            - Logout
+            - New order
+            - New subscriber
+            - Profile page
+            - Explore
+            - View product
+            - Cart
+            - Process payment
+            - Verify payment
+        #### Users:
+            - Registers new user
+            - Login user
+            - Verifies OTP
+            - Profile page
+        #### Orders:
+            - Process payments
+            - Verify payments
+            - Updates inventory
+            - Stores payment
+            - Updates order status
+        #### Marketing:
+            - New campaign
+            - Updates campaing
+        #### Analytics:
+            - Stores user movements
+            - Draws conclutions
+        #### Inventory
+            - Creates, reads, updates and deletes inventory items
+            - Reads inventory status
+            - Generates shipping tracking status
+
+
+## Wireframe
 Below are some screenshots of our ecommerce store
 - Credit to [@waverlylab](https://www.figma.com/@waverlylab) for the creation of such wireframe
 - License: [Attribution 4.0 International (CC BY 4.0)](https://creativecommons.org/licenses/by/4.0/)
@@ -56,18 +112,10 @@ Below are some screenshots of our ecommerce store
 ![alt text](https://github.com/RomanW05/ecommerce/blob/main/blob/wireframe/wireframe-15.png?raw=true)
 
 
-### Flowchart
-* User lands on the landing-page
-* Clicks on a product that appeals
-* Selects the correct size and color
-* Adds to cart
-* Clicks on checkout
-* Inserts billing information
-* Pays
-* Receives a tracking number via email
-* Checks the status of the tracking number
-* Receives the package
 
+
+
+## Flowchart
 
 #### Overview
 ![alt text](https://github.com/RomanW05/ecommerce/blob/main/blob/Overview.png?raw=true)
@@ -210,9 +258,7 @@ Below are some screenshots of our ecommerce store
 |   |-- azure-deployment.yml
 |   |-- azure-services-setup.sh
 
-### Live demo
-You can view a live demo of our ecommerce store at [TBD](TBD).
 
 
-### Design tools
+## Design tools
 We used Figma for our design work wireframe and https://app.diagrams.net for the diagrams overview. You can view our design files on [Figma](https://www.figma.com/community/file/966016571279781800) and ![Drawio](https://github.com/RomanW05/ecommerce/blob/main/blob/Overview.drawio)
