--- a/documentation/1.Analysis.md
+++ b/documentation/1.Analysis.md
@@ -2,7 +2,7 @@
 ## I. Project Overview:
 
 #### 1.1 Objective:
-    The objective of this project is to develop a fully functional e-commerce website for an apparel store with 50000 users per month that meets the client's requirements for speed, security, usability, aesthetics, legal compliance, and mobile responsiveness
+*    The objective of this project is to develop a fully functional e-commerce website for an apparel store with 50000 users per month that meets the client's requirements for speed, security, usability, aesthetics, legal compliance, and mobile responsiveness
 
 #### 1.2 Scope:
     The website will include features for browsing and purchasing clothing items online. It will be designed to showcase the clothing collection, filter items by properties such as: Brand, color, size, type and price. Provide secure payment options, an enjoyable user experience, a login page to store and update the clients personal information, a marketing page to create and manage campaigns, and an analysis page with the information about all actions regarding the website.
