--- a/documentation/1.Analysis.md
+++ b/documentation/1.Analysis.md
@@ -5,73 +5,73 @@
 *    The objective of this project is to develop a fully functional e-commerce website for an apparel store with 50000 users per month that meets the client's requirements for speed, security, usability, aesthetics, legal compliance, and mobile responsiveness
 
 #### 1.2 Scope:
-    The website will include features for browsing and purchasing clothing items online. It will be designed to showcase the clothing collection, filter items by properties such as: Brand, color, size, type and price. Provide secure payment options, an enjoyable user experience, a login page to store and update the clients personal information, a marketing page to create and manage campaigns, and an analysis page with the information about all actions regarding the website.
+*    The website will include features for browsing and purchasing clothing items online. It will be designed to showcase the clothing collection, filter items by properties such as: Brand, color, size, type and price. Provide secure payment options, an enjoyable user experience, a login page to store and update the clients personal information, a marketing page to create and manage campaigns, and an analysis page with the information about all actions regarding the website.
 
 
 ## II. Requirements:
 
-    2.1 Functional requirements
+*    2.1 Functional requirements
         1. User Authentication and Authorization:
 
             User registration and login functionality.
             Secure password handling.
             Different user roles: Customer, Administrator.
 
-        2 Product Management:
+        2. Product Management:
 
             Ability for administrators to add, edit, and delete product listings.
             Categorization and tagging of products for easy navigation.
             Product images, descriptions, prices, sizes, brands and colors
 
-        3 Shopping Cart:
+        3. Shopping Cart:
 
             Users should be able to add/remove items from the cart.
             Real-time calculation of the total cost.
             Secure checkout process with multiple payment options.
 
-        4 Search and Filtering:
+        4. Search and Filtering:
 
             Intuitive search functionality.
             Filtering options based on categories, sizes, colors, etc.
 
-        5 Responsive Design:
+        5. Responsive Design:
 
             Mobile-friendly design for seamless user experience on various devices.
 
-        6 Performance:
+        6. Performance:
 
             Fast loading times for both desktop and mobile versions.
             Image optimization for quick loading without compromising quality.
 
-        7 Security:
+        7. Security:
 
             HTTPS to secure data transmission.
             Secure payment gateway integration.
             Protection against common web vulnerabilities (e.g., SQL injection, cross-site scripting).
 
-        8 Legal Compliance:
+        8. Legal Compliance:
 
             GDPR compliance for user data protection.
             Clear terms and conditions, privacy policy, and return policy.
             Compliance with regional e-commerce regulations.
 
-        9 User Experience (UX):
+        9. User Experience (UX):
 
             Intuitive and easy-to-navigate interface.
             User-friendly product pages with clear calls-to-action.
             Mobile-first design for optimal viewing on smartphones and tablets.
 
-        10 Aesthetics:
+        10. Aesthetics:
 
             Visually appealing design that aligns with the brand image.
             High-quality images for products.
 
-        11 Reporting and Analytics:
+        11. Reporting and Analytics:
 
             Administrator dashboard with key metrics (e.g., sales, popular products).
             Integration with Google Analytics or similar tools for in-depth analysis.
 
-        12 Webpages:
+        12. Webpages:
 
             + Login
             + Profile
@@ -83,7 +83,7 @@
             + Checkout confirmation
             + Payment with 3rd party integration
 
-    2.2 Non functional requirementes
+*    2.2 Non functional requirementes
 
         Customer guidance through different buying stages:
             - Awareness
