--- a/documentation/1.Analysis.md
+++ b/documentation/1.Analysis.md
@@ -95,30 +95,30 @@
 
 ## III. Stakeholders:
 
-    Client: [Clients name]
-    End Users: Online shoppers interested in purchasing clothing items.
-    Administrators: Staff responsible for managing product listings, processing orders, and maintaining the website.
+*    Client: [Clients name]
+*    End Users: Online shoppers interested in purchasing clothing items.
+*    Administrators: Staff responsible for managing product listings, processing orders, and maintaining the website.
 
 
 ## IV. Constraints:
 
-    Compatibility with popular web browsers.
-    Integration with selected payment gateways.
-    Consideration of potential scalability requirements.
+*    Compatibility with popular web browsers.
+*    Integration with selected payment gateways.
+*    Consideration of potential scalability requirements.
 
 
 ## V. Assumptions:
 
-    Users have basic internet connectivity.
-    Customers will use a variety of devices and browsers.
-    The website will comply with relevant e-commerce and data protection laws.
-    The client 
+*    Users have basic internet connectivity.
+*    Customers will use a variety of devices and browsers.
+*    The website will comply with relevant e-commerce and data protection laws.
+*    The client provides all legal documentation, and is responsable for the creation, update and deletion of products
 
 ## VI. Risks:
 
-    Potential security vulnerabilities.
-    Changes in e-commerce regulations.
-    Technical challenges in integrating third-party services.
+*    Potential security vulnerabilities.
+*    Changes in e-commerce regulations.
+*    Technical challenges in integrating third-party services.
 
 
 
