--- a/documentation/2.Design.md
+++ b/documentation/2.Design.md
@@ -5,11 +5,19 @@ Come up with a plan or algorithm to successfully and efficiently execute the cli
 
 ## Customer actions:
 
-    * Browse products and categories, filter search, add units to cart, remove units from cart, update profile, pay order, comment and rate products, subscribe to newsletter, contact support, register, login and logout.
+*    Browse products and categories, filter search, add units to cart, remove units from cart, update profile, pay order, comment and rate products, subscribe to newsletter, contact support, register, login and logout.
 
 
-+ To know the inventory and its internal structure to manipulate it with a database:
-    * Name, price, size, color, category, sku, images, description, discount, number of units, order status, shipping status.
+## Database
+
+#### Products
+
+*    Name, price, size, color, category, sku, images, description, discount, quantity.
+
+#### Orders
+
+*   
+
 
 + To make a scalable and robust website:
     + Robust:
