--- a/documentation/2.Design.md
+++ b/documentation/2.Design.md
@@ -61,41 +61,36 @@ Come up with a plan or algorithm to successfully and efficiently execute the cli
 
     * Each microservice consists of a different organization depending on its needs
     * Backend microservices are arranged providing the following endpoints:
-        #### API (handles all requests and delegates):
-            - New user registration
-            - Login
-            - Verify OTP
-            - Logout
-            - New order
-            - New subscriber
-            - Profile page
-            - Explore
-            - View product
-            - Cart
-            - Process payment
-            - Verify payment
         #### Users:
-            - Registers new user
-            - Login user
-            - Verifies OTP
+            - Login
+            - Logout
+            - New user registration
+            - Recover password
             - Profile page
+            - Verify OTP
+        #### Cart:
+            - Add to cart
+            - Remove from cart
+            - View cart
+            - Checkout
         #### Orders:
+            - New order
             - Process payments
             - Verify payments
-            - Updates inventory
-            - Stores payment
-            - Updates order status
+            - Store payment
+            - Generate tracking number
         #### Marketing:
+            - New subscriber
             - New campaign
-            - Updates campaing
-        #### Analytics:
-            - Stores user movements
-            - Draws conclutions
+            - Campaign update
         #### Inventory
-            - Creates, reads, updates and deletes inventory items
-            - Reads inventory status
-            - Generates shipping tracking status
+            - View product
+            - Explore
+            - Tracking status
+        #### Analytics:
+            - Store user actions
 
+The inventory actions such as: "create", "update" and "delete" will be managed via the control panel
 
 ## Wireframe
 Below are some screenshots of our ecommerce store
