--- a/documentation/2.Design.md
+++ b/documentation/2.Design.md
@@ -47,13 +47,12 @@ Come up with a plan or algorithm to successfully and efficiently execute the cli
 
     The Web application e-commerce consists of the following microservices:
 
-    * Backend Service: Manages the interactions with the user and displays all the information. Provides the endpoints, APIs and allows interaction
-    * Inventory Service: Manages and tracks the inventory levels of each product. Provides operations for updating inventory levels and interacts with the Order Service.
-    * Order Service: Manages payments of the order placement and fulfillment process. Provides operations for placing orders, tracking order and status.
-    * User Service: Manages user authentication and authorization. Provides operations for registering, logging in, and managing user accounts.
-    * Marketing Service: Manages marketing campaigns and product discounts. Provides mechanisms for users to benefit from the different companys strategies.
-    * Email Service: Manages email sent to a subscribers list. Provides a list of subscribed user to send emails to and keeps track of the sent emails.
-    * Analytics Service: Keeps track of all actions in the platform. Provides statistics based on user interactions, consumer behaviour and measures marketing campaigns effectiveness.
+    * User Service: Manages user authentication and authorization. Provides operations for registering a new user, logging in, managing user accounts, update profile information and OTP validation.
+    * Inventory API: Displays products and lets the user explore the galleries and content.
+    * Cart: Allows the user to add an item to the shopping cart or remove it. It also allows the preview of the cart content and provides a checkout
+    * Order API: Manages the order fullfillment assuing a correct order placement and payment verification, after a successfull process of an order it generates a tracking number for the user.
+    * Marketing API: Managed by the marketing team to create marketing campaigns via email, allowing users who gave their consent to be emailed with promotions and discounts. 
+    * Analytics API: Keeps track of all user actions in the platform. Provides data to be analyzed and create statistics based on user behaviour and measures marketing campaigns effectiveness.
 
     Each microservice is built as a separate Python package and runs in its own Docker container. Communication between services is handled through Kafka topics, allowing for scalable and fault-tolerant messaging. The Web application also includes a gateway service, built with Django, that provides a unified API for clients to interact with the microservices.
 
