--- a/documentation/2.Design.md
+++ b/documentation/2.Design.md
@@ -87,7 +87,10 @@ Come up with a plan or algorithm to successfully and efficiently execute the cli
             - Explore
             - Tracking status
         #### Analytics:
-            - Store user actions
+            - Create statistics
+            - Delete statistics
+            - View statistics
+            - Update statistics
 
 The inventory actions such as: "create", "update" and "delete" will be managed via the control panel
 
